--- a/index.css
+++ b/index.css
@@ -2,6 +2,12 @@ body{
 	margin-top:80px;
 	font-family: 'Poiret One', cursive;	
 }
+.container{
+	max-width: 1300px;
+	min-width:1300px;
+	margin-left:auto;
+	margin-right:auto;
+}
 /*headings*/
 header{
 	background-color: white;
@@ -27,6 +33,8 @@ nav{
 	background-color: salmon;
 	height: 70px;
 	width: 99%;
+	max-width:1300px;
+	min-width:1300px;
 	font-family: 'Amatic SC', cursive;
 }
 
@@ -47,7 +55,9 @@ nav li{
 	right: 12px;
 	float:right;
 	position: fixed;
-	color: white;
+	color: black;
+	width:40%;
+	max-width:800px;
 }
 /*main*/
 main{
