--- a/index.css
+++ b/index.css
@@ -1,5 +1,4 @@
 body{
-	margin-top:80px;
 	font-family: 'Poiret One', cursive;	
 }
 .container{
@@ -10,11 +9,31 @@ body{
 }
 /*headings*/
 header{
-	background-color: white;
+	/*background-color: white;
 	text-align: center;
 	font-size: 200%;
-	margin-top: 50px;
+	margin-top: 80px;
 	font-family: 'Poiret One', cursive;
+	position:fixed;
+	top:0;
+	background-color: salmon;
+	height: 70px;
+	width: 99%;
+	max-width:1300px;
+	min-width:1300px;
+	font-family: 'Amatic SC', cursive;*/
+	margin-left:auto;
+	margin-right:auto;
+	left:0;
+	width:99.6%;
+	text-align:center;
+	margin-top:5%;
+	font-size: 175%;
+	line-height: 2px;
+	background-color:salmon;
+	border: 3px solid salmon;
+	margin-bottom: 4px;
+
 }	
 
 h2{
@@ -50,27 +69,26 @@ nav li{
 	float: left;
 	
 }
-#tagline{
-	top: 23px;
-	right: 12px;
-	float:right;
+nav#tagline{
+	top: 0;
+	right: 0;
 	position: fixed;
 	color: black;
-	width:40%;
-	max-width:800px;
+	width:100%;
+
 }
 /*main*/
 main{
 	background-color: black;
 	color: white;
-	border-left: 25px dotted white;	
-	border-radius: 2px;
-	padding-right: 45px;
-	padding-top: 20px;
+	/*border-left: 25px dotted white;*/
+	border-radius: 10px;
+	padding-top:20px;
 	padding-bottom: 20px;
 	width: 45%;
 	margin-left: auto;
 	margin-right:auto;
+	min-height: 665px;
 }
 /*paragraphs*/
 .indexmain p{
@@ -87,13 +105,10 @@ main{
 	text-align:left;
 }
 .blogmain p{
-	margin-left: 50px;
-	margin-right: 60px;
-	width:95%;
+	padding: 45px;
 	font-family: 'Amatic SC', cursive;
 	color: white;
 	font-size: 30px;
-	min-height: 500px;
 }
 
 /* Aside*/
@@ -107,6 +122,7 @@ main{
 	padding: 5px;
 	width: 300px;
 	text-align:center;
+	padding-bottom:30px;
 }
 
 /*images*/
@@ -119,9 +135,8 @@ main{
 	border-radius: 50px;
 }
 p .blogimg{
-	width: 20%;
-	margin-left: 35%;
-	margin-right: auto;
+	width: 40%;
+	margin-left:120px;
 	border: 5px solid salmon;
 	padding: 10px;
 	margin-bottom: 50px;
@@ -136,7 +151,8 @@ table{
 	height: 500px;
 	}
 th{
-	font-size: 40px;
+	font-size: 20px;
+	padding: 10px;
 	font-weight: bold;
 	background-color: salmon;
 	width: 120%;
@@ -184,6 +200,7 @@ nav a:link{
 a{
 	color: salmon;
 	text-decoration: none;
+	font-family: 'Poiret One', cursive;
 }
 
 /*Goodreads widget css*/
