--- a/index.css
+++ b/index.css
@@ -161,6 +161,8 @@ td{
 	width: 40px;
 	border-bottom: .5px solid salmon;
 	border-right: .5px solid salmon;
+	padding-left: 5px;
+	padding-right:5px;
 }
 /*footer*/
 footer{
