--- a/index.css
+++ b/index.css
@@ -1,12 +1,16 @@
 body{
 	font-family: 'Poiret One', cursive;	
-}
-.container{
 	max-width: 1300px;
 	min-width:1300px;
 	margin-left:auto;
 	margin-right:auto;
 }
+/*.container{
+	max-width: 1300px;
+	min-width:1300px;
+	margin-left:auto;
+	margin-right:auto;
+}*/
 /*headings*/
 header{
 	margin-left:auto;
